...

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="save">Salvar</string>


    <string name="cancel">Cancelar</string>
    <string name="cart_dialogTitle_addSimpleProduct">Adicionar Produto Temporario</string>

    <!-- Cart -->
    <!-- Dialog -->
    <string name="cart_dialogTitle_addProduct">Adicionar Produto</string>
    <string name="cart_dialogTitle_addRecipe">Adicionar Receita</string>
...
    <string name="snackbar_undo">DESFAZER</string>
    <string name="itemCart_toast_productAlreadyRegistered">Produto já esta cadastrado.</string>
    <string name="product_validation_name">Preencha o nome do produto.</string>
    <string name="validation_maxLenght">O numero de caracteres não deve ser superior a 25</string>
    <string name="product_validation_price">Campo obrigatório.</string>
    <string name="itemCart_validation_amount">Campo obrigatório.</string>
    <string name="validation_obrigatoryField">Campo obrigatório.</string>
    <string name="itemCart_validation_simpleItemAlreadyExists">Já existe um produto cadastrado com esse nome.</string>
    <string name="toast_recipe_alreadyRegistered">Receita já cadastrada.</string>
    <string name="recipe_validation_ingredients"> %s ( Obrigatório )</string>
    <string name="toast_itemStock_validRegistration">Produto Cadastrado !</string>
    <string name="toast_itemStock_invalidRegistration">O produto já está cadastrado.</string>
    <string name="itemCart_emptyList_title">Nenhum item cadastrado</string>
...
    <!-- EmptyList -->
    <string name="product_emptyList_title">Nenhum produto cadastrado</string>
    <string name="product_emptyList_description">Os produtos serão exibidos aqui. </string>
    <string name="recipe_emptyList_title">Nenhuma receita cadastrada.</string>
    <string name="recipe_emptyList_description">As receitas serão exibidas aqui. </string>
    <string name="emptyList_image_contentDescription">Imagem meramente ilustrativa</string>
    <string name="stock_emptyList_title">Nenhum item cadastrado</string>
    <string name="stock_emptyList_description">Os itens adicionados ao estoque serão exibidos aqui.</string>
    <string name="list_removedItems">%d items removidos.</string>
    <string name="list_oneRemovedItems">%d item removido.</string>
    <string name="itemCart_registration_products">Produtos</string>
    <string name="itemCart_registration_recipes">Receitas</string>
    <string name="itemCart_registration_save">Salvar</string>
    <string name="product_registration_title">Novo Produto</string>
...
    <string name="stock_minTxt">atual</string>
    <string name="search_product">Procurar</string>
    <string name="stock_register">Adicionar ao Estoque</string>
    <string name="stock_registration_selectProduct">Selecione o Produto</string>
    <string name="contentDescription_stock_expandProductsListIcon">Icone para substituir o produto escolhido</string>
    <string name="cart_snackbar_confirmCheck">Concluído</string>
    <string name="itemStock_update_productTitle">Produto:</string>
    <string name="itemstock_consume_recipeTitle">Consumir Receita</string>
    <string name="itemstock_consume_productTitle">Consumir Produto</string>
    <string name="amountFieldTitle">Quantidade: </string>
    <string name="updateItem">Atualizar Item</string>
    <string name="error_title_recipesNotRegistered">Nenhuma receita cadastrada</string>
    <string name="error_message_recipesNotRegistered">  Cadastre receitas para poder atualizar rapidamente os ingredientes presentes no estoque.</string>
    <string name="error_positiveButton_recipesNotRegistered">Cadastrar Receitas</string>
    <string name="error_title_itemStockNotRegistered">Nenhum item cadastrado</string>
    <string name="error_message_itemStockNotRegistered"> Para atualizar um item é necessário que haja algum produto adicionado ao estoque.</string>
    <string name="error_positiveButton_itemStockNotRegistered">Cadastrar Item</string>
    <string name="error_title_procutsNotRegistered">Nenhum produto cadastrado</string>
    <string name="error_message_productsNotRegistered"> Para pode adicionar um item ao estoque é necessario que exista produtos cadastrados.</string>
    <string name="error_positiveButton_productsNotRegistered">Cadastrar Produto</string>
    <string name="title_activity_login">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_signin_google">Entrar com Google</string>
    <string name="login_signin_facebook">ENTRAR COM FACEBOOK</string>
    <string name="login_signup_btn">Não tem uma conta ? Cadastre-se !</string>
...
