<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <TextView
        android:id="@+id/perfil_dialog_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryLight"
        android:gravity="center"
        android:text="@string/updateItem"
        android:textColor="#ffffff"
        android:elevation="2dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_itemstock_productname"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="Selected Product"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_itemstock_productnameLabel"
        app:layout_constraintTop_toBottomOf="@+id/perfil_dialog_title"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/dialog_itemstock_productnameLabel"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/itemStock_update_productTitle"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perfil_dialog_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_itemstock_actualAmountLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/dialog_itemstock_maxAmountLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_itemstock_productnameLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_itemstock_actualamount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stock_minTxt"
            android:inputType="numberDecimal"
           />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_itemstock_maxAmountLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_itemstock_actualAmountLayout"
        app:layout_constraintTop_toBottomOf="@+id/dialog_itemstock_productname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_itemstock_maxamount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stock_maxTxt"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>