<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/itemStock_consume_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryLight"
        android:gravity="center"
        android:text="title"
        android:textColor="#ffffff"
        android:elevation="2dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/itemStock_consume_amount"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/itemStock_consume_amountLabel"
        app:layout_constraintTop_toBottomOf="@+id/itemStock_consume_title" />

    <TextView
        android:id="@+id/itemStock_consume_amountLabel"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/amountFieldTitle"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/itemStock_consume_amount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemStock_consume_title" />

    <Spinner
        android:id="@+id/itemStock_spinner_consume"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemStock_consume_amountLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>